Customer Price - fix for module enabled feature

--- a/view/frontend/templates/hyva/price.phtml
+++ b/view/frontend/templates/hyva/price.phtml
@@ -12,8 +12,9 @@ use Magento\Framework\Escaper;
 
 /** @var Product $product */
 $product = $block->getProduct();
-
+$viewModel = $block->getData('viewModel');
 ?>
+<?php if ($viewModel->isLoggedIn() && $viewModel->isAjaxEnabled()): ?>
 <script>
     (() => {
         const initFnName = 'initPrice<?= (int)$product->getId() ?>'
@@ -69,3 +70,4 @@ $product = $block->getProduct();
         }
     })()
 </script>
+<?php endif; ?>
