--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -8,7 +8,11 @@
                    name="commerce365.product.info.price"
                    template="Commerce365_CustomerPriceHyva::hyva/price.phtml"
                    after="product.detail.page"
-            />
+            >
+                <arguments>
+                    <argument name="viewModel" xsi:type="object">Commerce365\CustomerPrice\ViewModel\CustomerPrice</argument>
+                </arguments>
+            </block>
             <block class="Magento\Catalog\Block\Product\Price"
                    name="commerce365.product.info.tier_price_uom"
                    template="Commerce365_CustomerPriceHyva::hyva/tier_price_uom.phtml"
