--- a/view/frontend/templates/hyva/customerprice.phtml
+++ b/view/frontend/templates/hyva/customerprice.phtml
@@ -87,19 +87,7 @@ $viewModel = $block->getData('viewModel'); ?>
                     if (!window.customerpriceConfig.productId || window.customerpriceConfig.productId !== productInfo.productId) {
                         document.querySelectorAll("[data-price-box=product-id-" + productInfo.productId + "]").forEach(element => {
                             element.outerHTML = productInfo.priceHtml;
-                            this.preselectConfigurableOnPLP(productInfo);
                         });
-                    }
-                },
-
-                preselectConfigurableOnPLP: function(productInfo) {
-                    if (productInfo.type === 'configurable' && window.preselectConfigurable) {
-                        const configurableConfig = JSON.parse(productInfo.configurableConfig);
-                        if (configurableConfig.defaultValues) {
-                            const simpleIndex = this.calculateSimpleIndexForFullSelection(configurableConfig);
-                            const detail = { detail : configurableConfig.optionPrices[simpleIndex] };
-                            window.dispatchEvent(new CustomEvent("update-prices-" + productInfo.productId, detail));
-                        }
                     }
                 },
 
@@ -167,29 +155,12 @@ $viewModel = $block->getData('viewModel'); ?>
                         }
                         let detail = { detail : config.prices };
                         window.dispatchEvent(new CustomEvent("update-initial-price-" + productId, {detail: config.prices.finalPrice.amount}));
-                        if (window.preselectConfigurable && config.defaultValues) {
-                            const simpleIndex = this.calculateSimpleIndexForFullSelection(config);
-                            detail = { detail : config.optionPrices[simpleIndex] };
-                        }
                         window.dispatchEvent(new CustomEvent("update-prices-" + productId, detail));
-                    }
-                },
-
-                calculateSimpleIndexForFullSelection(config) {
-                    const productIndexes = config.index;
-                    return Object.keys(productIndexes).find(productIndex => {
-                        const productCandidateOptions = productIndexes[productIndex];
-
-                        for (const productOption in productCandidateOptions) {
-                            if (
-                                ! config.defaultValues[productOption] ||
-                                config.defaultValues[productOption] !== productCandidateOptions[productOption]
-                            ) {
-                                return false;
-                            }
+                        if (window.preselectConfigurable) {
+                            const swatch = document.querySelector('.swatch-attribute-options .swatch-option');
+                            if (swatch) swatch.click();
                         }
-                        return productIndex;
-                    });
+                    }
                 },
 
                 createMutationObserver: function() {
@@ -262,7 +233,10 @@ $viewModel = $block->getData('viewModel'); ?>
                         if (priceUomElement) {
                             priceUomElement.innerHTML = uomPrice.pricePerUOM + '/' + uomPrice.UOM;
                         } else {
-                            const container = document.getElementById('product-price-' + instance.productId);
+                            const container = document.querySelector('[data-product-id="' + instance.productId + '"] .price-wrapper');
+                            if (!container) {
+                                return;
+                            }
                             priceUomElement = document.createElement('div');
                             priceUomElement.classList.add('commerce365-price-per-uom');
                             priceUomElement.setAttribute('id', 'price-per-uom-' + instance.productId);
