--- a/view/frontend/templates/hyva/tier_price_uom.phtml
+++ b/view/frontend/templates/hyva/tier_price_uom.phtml
@@ -26,7 +26,7 @@ $product = $block->getProduct();
                         apply(target, objContext, args) {
                             const item = args[0];
                             let detail = {};
-                            if (!window.customerpriceConfig.selectedTierPriceInfo.length) {
+                            if (!window.customerpriceConfig.selectedTierPriceInfo) {
                                 return target.apply(objContext, args);
                             }
                             window.customerpriceConfig.selectedTierPriceInfo.forEach(tierPrice => {
