--- a/view/frontend/templates/hyva/customerprice.phtml
+++ b/view/frontend/templates/hyva/customerprice.phtml
@@ -99,11 +99,15 @@ $viewModel = $block->getData('viewModel'); ?>
                     if (!productInfo.tierPriceHtml) return;
                     // Make sure to not render this a second time
                     if (document.getElementById('customer-tier-price')) return;
+                    let tierPriceElement = document.getElementById('tier-price-container-' + productInfo.productId);
+                    if (!tierPriceElement) {
+                        tierPriceElement = document.createElement('div');
+                        tierPriceElement.classList.add('py-4', 'my-2', 'tier-price-container');
+                        tierPriceElement.id = 'tier-price-container-' + productInfo.productId;
+                        document.getElementById("product_addtocart_form").parentNode.appendChild(tierPriceElement);
+                    }
 
-                    const tierPriceElement = document.createElement('div');
-                    tierPriceElement.classList.add('py-4', 'my-2', 'tier-price-container');
                     tierPriceElement.innerHTML = productInfo.tierPriceHtml;
-                    document.getElementById("add-to-compare").parentNode.after(tierPriceElement);
                 },
 
                 getElementProductId: function(element) {
